OrderServiceTest fixed